Add JavacDomPackageAccessor utility to wrap package-private DOM methods
Created JavacDomPackageAccessor.java in org.eclipse.jdt.core.dom package to
provide public access to package-private DOM methods:
- setLineEndTable(CompilationUnit, int[])
- setCommentTable(CompilationUnit, Comment[])
- setDefaultNodeFlag(AST, int)
- setParent(ASTNode, ASTNode, StructuralPropertyDescriptor)
- clone(ASTNode, AST)
- setImplicit(YieldStatement, boolean)
- setRestrictedIdentifierStartPosition(GuardedPattern, int)
- internalSetEscapedValue(StringLiteral, String)
- internalSetEscapedValue(TextBlock, String, String)

Updated JavacConverter and JavacDOMParser to use accessor instead of direct calls.

Also fixed:
- getLast() → get(size - 1) [Java 21 → Java 8]
- Type casting in Comment stream operations

Errors reduced: 44 → 32

Remaining errors:
- Scanner constructor (javac Scanner, not DOM - needs different solution)
- JavacDOMUtil javadoc parsing issues (separate file)